# sanghacalendar

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  ROADMAP.md  fly.toml  pyproject.toml
.github/workflows/: ingest.yml
data/: store.py
data/schemas/: event.py
ingestion/: abraxis_ingest.py  coordinator.py  llm_classifier.py  utils.py
ingestion/feeds/: ical_feed.py
ingestion/scrapers/: eventbrite.py  squarespace.py  static_html.py  wild_apricot_rss.py
ingestion/sources/: albany.py  albuquerque.py  anchorage.py  ann_arbor.py  asheville.py  atlanta.py  austin.py  baltimore.py  bend.py  birmingham.py  bloomington.py  boise.py  boston.py  bozeman.py  buffalo.py  burlington.py  charlotte.py  charlottesville.py  chattanooga.py  chicago.py  cincinnati.py  cleveland.py  colorado_springs.py  columbus.py  connecticut.py  dallas.py  dc.py  denver.py  des_moines.py  detroit.py  east_bay.py  eugene.py  flagstaff.py  fort_collins.py  fresno.py  gainesville.py  greenville.py  honolulu.py  houston.py  huntsville.py  (+42 more)
memory/: research-nyc-meditation-calendar.md
scripts/: austin-ingest-once.js  portland-ingest-once.js  sangha-ingest.js  sangha-momence-ingest.py  sangha-seed-recurring.js  sangha-shambhala-ingest.py  sangha-spiritrock-ingest.py  send_digest.py
serving/: app.py  centers.py
serving/static/: filters.js
serving/templates/: _filters.html  center.html  index.html  map.html  submit.html
