[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sangha-calendar"
version = "0.1.0"
description = "Every in-person meditation sit in the US, in one place."
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "icalendar>=5.0",
    "flask>=3.0",
    "openai>=1.0",       # LLM-assisted classification
    "python-dateutil>=2.8",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "pyright"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
